--- a/game.ui
+++ b/game.ui
@@ -2055,44 +2055,32 @@
     <string>It is player 1's turn.</string>
    </property>
   </widget>
-  <widget class="QTextEdit" name="Player1Wins">
+  <widget class="QPlainTextEdit" name="Player2WinText_2">
    <property name="geometry">
     <rect>
      <x>200</x>
      <y>250</y>
-     <width>191</width>
-     <height>21</height>
+     <width>161</width>
+     <height>31</height>
     </rect>
    </property>
-   <property name="html">
-    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-hr { height: 1px; border-width: 0; }
-li.unchecked::marker { content: &quot;\2610&quot;; }
-li.checked::marker { content: &quot;\2612&quot;; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Noto Sans'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Player 1's wins:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   <property name="plainText">
+    <string>Player 1 Win's
+</string>
    </property>
   </widget>
-  <widget class="QTextEdit" name="Player2Wins">
+  <widget class="QPlainTextEdit" name="Player2WinText">
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>280</y>
-     <width>191</width>
-     <height>21</height>
+     <y>270</y>
+     <width>161</width>
+     <height>31</height>
     </rect>
    </property>
-   <property name="html">
-    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-hr { height: 1px; border-width: 0; }
-li.unchecked::marker { content: &quot;\2610&quot;; }
-li.checked::marker { content: &quot;\2612&quot;; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Noto Sans'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Player 2's wins:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   <property name="plainText">
+    <string>Player 2 Win's
+</string>
    </property>
   </widget>
  </widget>
