--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,40 +14,17 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="verticalLayoutWidget">
+   <widget class="QGroupBox" name="Connect4">
     <property name="geometry">
      <rect>
-      <x>9</x>
-      <y>10</y>
-      <width>171</width>
-      <height>141</height>
+      <x>10</x>
+      <y>20</y>
+      <width>771</width>
+      <height>121</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="verticalLayout_2">
-     <item>
-      <widget class="QPushButton" name="TwoPlayerButton">
-       <property name="text">
-        <string>Two Player's</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="OnePlayerButton">
-       <property name="text">
-        <string>One Player</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QWidget" name="horizontalLayoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>209</x>
-      <y>29</y>
-      <width>581</width>
-      <height>111</height>
-     </rect>
+    <property name="title">
+     <string/>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
@@ -65,6 +42,113 @@
 </string>
        </property>
       </widget>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" name="Buttons">
+       <item>
+        <widget class="QPushButton" name="OnePlayerButton">
+         <property name="text">
+          <string>One Player</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="TwoPlayerButton">
+         <property name="text">
+          <string>Two Player's</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QGroupBox" name="BattleShip">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>150</y>
+      <width>771</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string/>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QPlainTextEdit" name="plainTextEdit_2">
+       <property name="font">
+        <font>
+         <family>Comfortaa SemiBold</family>
+         <pointsize>60</pointsize>
+         <bold>true</bold>
+         <underline>true</underline>
+        </font>
+       </property>
+       <property name="plainText">
+        <string>Battleship</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" name="Buttons_2">
+       <item>
+        <widget class="QPushButton" name="OnePlayerButton_2">
+         <property name="text">
+          <string>One Player</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QGroupBox" name="TicTacToe">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>280</y>
+      <width>771</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string/>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <widget class="QPlainTextEdit" name="plainTextEdit_3">
+       <property name="font">
+        <font>
+         <family>Comfortaa SemiBold</family>
+         <pointsize>60</pointsize>
+         <bold>true</bold>
+         <underline>true</underline>
+        </font>
+       </property>
+       <property name="plainText">
+        <string>Tic Tac Toe</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" name="Buttons_3">
+       <item>
+        <widget class="QPushButton" name="OnePlayerButton_3">
+         <property name="text">
+          <string>One Player</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="TwoPlayerButton_3">
+         <property name="text">
+          <string>Two Player's</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </widget>
